# lightswitch

./: .clang-format  .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  claude.txt  claude2.txt  flake.nix  install.sh  justfile  lightswitch.nix  lightswitch.service  logs.txt  m  profile.perfetto  pyroscope_ingest.py  today.md  vm.nix  vmtest.toml  ymbolize  zed_maps.txt
.cargo/: config.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: build.yml  container.yml  release.yml  static-build-and-upload.yml  upload.yml  vmtests.yml
benches/: benchmark.rs  unwind_info.rs
docker/: Dockerfile  Dockerfile.test  README.md
docs/: btf.md  contributing.md  debugging.md  performance.md  philosophy.md  process_lifecycle.md  processes_and_threads.md  tutorial.md
lightswitch-capabilities/: CHANGELOG.md  Cargo.toml  build.rs
lightswitch-capabilities/src/: lib.rs  system_info.rs
lightswitch-capabilities/src/bpf/: features.bpf.c  mod.rs  noprealloc_test.bpf.c  vmlinux.h  vmlinux_x86.h
lightswitch-metadata/: CHANGELOG.md  Cargo.toml
lightswitch-metadata-provider/: Cargo.toml
lightswitch-metadata-provider/src/: label.rs  lib.rs  metadata_label.rs  metadata_provider.rs  process_metadata.rs  system_metadata.rs  task_metadata.rs  taskinfo.rs
lightswitch-metadata/src/: lib.rs  metadata_label.rs  metadata_provider.rs  system_metadata.rs  task_metadata.rs  taskname.rs  types.rs
lightswitch-metadata/src/containers/: cid_resolver.rs  k8s_metadata_cache.rs  k8s_metadata_provider.rs  mod.rs
lightswitch-object/: CHANGELOG.md  Cargo.toml
lightswitch-object/src/: buildid.rs  kernel.rs  lib.rs  object.rs
lightswitch-object/src/testdata/: fedora-kernel-notes  main-go
lightswitch-proto/: CHANGELOG.md  Cargo.toml  build.rs
lightswitch-proto/src/: label.rs  lib.rs  otlp.rs  perfetto.rs  profile.rs
lightswitch-proto/src/protos/: perfetto_trace.proto
lightswitch-sys-probe/: Cargo.toml  build.rs
lightswitch-sys-probe/src/: lib.rs  system_info.rs
lightswitch-sys-probe/src/bpf/: features_skel.rs  vmlinux.h  vmlinux_arm64.h
lightswitch-unwind-info/: CHANGELOG.md  Cargo.toml
lightswitch-unwind-info/src/: convert.rs  lib.rs  manager.rs  optimize.rs  pages.rs  persist.rs
nix/: k8s.nix
proto/: Cargo.toml
proto/src/: profile.rs
proto/src/protos/: profile.proto
src/: TODO:.md  aggregator.rs  bpf_objects.rs  bpf_poller.rs  collector.rs  debug_info.rs  deletion_scheduler.rs  kernel.rs  ksym.rs  lib.rs  main.rs  memory_monitor.rs  metadata.rs  native_unwind_state.rs  object.rs  perf_events.rs  process.rs  profile.rs  profiler.rs  server.rs  system_info.rs  unwind_info.rs  usym.rs  util.rs
src/bpf/: .clang-format  basic_types.h  bindings.rs  bpf.rs  constants.h  dwarf_unwinder.c  dwarf_unwinder.h  features.bpf.c  mod.rs  native_unwinder_bindings.rs  profiler.bpf.c  profiler.h  profiler.rs  profiler_bindings.rs  shared_helpers.h  shared_maps.h  tracers.bpf.c  tracers.h  tracers_bindings.rs  vmlinux.h  vmlinux_arm64.h  vmlinux_x86.h
src/cli/: .main.rs.pending-snap  args.rs  killswitch.rs  main.rs  runner.rs  tui.rs  validators.rs
src/collector/: mod.rs  perfetto.rs
src/profile/: aggregated.rs  convert.rs  frame.rs  mod.rs  sample.rs
src/unwind_info/: convert.rs  manager.rs  mod.rs  optimize.rs  pages.rs  persist.rs  source.rs  types.rs
src/util/: arch.rs  cpu.rs  file.rs  lpm.rs  mod.rs  page.rs
temp-benchmark/: notes.md
temp-benchmark/report/: index.html
test-progs/: Cargo.toml
tests/: integration_test.rs
tests/testdata/: main_cpp_clang_03_with_inlined_3s
tests/testdata/unwind-info/: README.md  arm64-cases.elf  arm64-cases.s  arm64-cases.yaml  generate-fixtures.sh  x86-cases.elf  x86-cases.s  x86-cases.yaml  x86-no-eh-frame.elf  x86-no-eh-frame.yaml  x86-no-fde.elf  x86-no-fde.yaml  x86-no-text.elf  x86-no-text.yaml  x86-unsorted-fdes.elf  x86-unsorted-fdes.yaml
tests/testprogs/: LICENSE-MIT  build-all.sh  flake.nix  shell.nix
tests/testprogs/src/: Makefile  basic_stack.FOR  main.cpp  per-function-optimizations.cpp
tests/testprogs/src/cgo/: main.go
tests/testprogs/src/go/: main.go
tests/testprogs/src/ocaml/: main.ml
xtask/: Cargo.toml
xtask/src/: main.rs
