[package]
name = "lightswitch"
version = "0.3.0"
edition = "2021"
description = "CPU profiler as a library for Linux suitable for on-demand and continuous profiling"
license = "MIT"
repository = "https://github.com/javierhonduco/lightswitch"

[workspace]
members = [
    "lightswitch-proto",
    "lightswitch-capabilities",
    "lightswitch-metadata",
    "lightswitch-object"
]

[workspace.dependencies]
memmap2 = "0.9.7"
anyhow = "1.0.99"
object = "0.37.3"
libbpf-rs = { version = "0.25.0-beta.1", features = ["static"] }
tracing = "0.1.41"
thiserror = "2.0.14"
perf-event-open-sys = "5.0.0"
procfs = "0.17.0"
nix = { version = "0.30.1" }
# workspace dev dependencies below
# workspace build dependencies below
libbpf-cargo = { version = "0.25.0-beta.1" }
glob = "0.3.3"
ring = "0.17.14"
libbpf-sys = "1.6.1"

[dependencies]
gimli = "0.32.0"
lazy_static = "1.5.0"
plain = "0.2.3"
clap = { version = "4.5.45", features = ["derive", "string"] }
# See https://github.com/libbpf/blazesym/issues/1105.
blazesym = { git = "https://github.com/libbpf/blazesym", rev = "94821e3", features = ["zlib"] }
tracing-subscriber = "0.3.19"
inferno = "0.12.3"
primal = "0.3.3"
prost = "0.14" # Needed to encode protocol buffers to bytes.
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
ctrlc = "3.4.7"
crossbeam-channel = "0.5.15"
itertools = "0.14.0"
lightswitch-metadata = { path = "lightswitch-metadata", version = "0.2.1" }
lightswitch-proto = { path = "lightswitch-proto", version = "0.2.1" }
lightswitch-capabilities = { path = "lightswitch-capabilities", version = "0.2.1" }
lightswitch-object = { path = "lightswitch-object", version = "0.3.1" }
memmap2 = { workspace = true }
anyhow = { workspace = true }
libbpf-sys = { workspace = true }
object = { workspace = true }
libbpf-rs = { workspace = true }
tracing = { workspace = true }
perf-event-open-sys = { workspace = true }
thiserror = { workspace = true }
procfs = { workspace = true }
nix = { workspace = true, features = ["user"] }
parking_lot = { version = "0.12.4", features = ["deadlock_detection"] }
ring = { workspace = true }

[dev-dependencies]
assert_cmd = { version = "2.0.17" }
insta = { version = "1.43.1", features = ["yaml"] }
rstest = "0.26.1"
criterion = "0.7.0"
tempfile = "3.20.0"

[build-dependencies]
libbpf-cargo = { workspace = true }
glob = { workspace = true }
bindgen = "0.72.0"

[profile.dev.package."*"]
opt-level = 3

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1

[[bench]]
name = "benchmark"
harness = false

[[bin]]
name = "lightswitch"
path = "src/cli/main.rs"
