[package]
name = "lightswitch-capabilities"
version = "0.1.0"
edition = "2021"
description = "Discover which BPF features are available"
license = "MIT"
repository = "https://github.com/javierhonduco/lightswitch"

[dependencies]
libc = "0.2.170"
anyhow = { workspace = true}
thiserror = { workspace = true}
libbpf-rs = { workspace = true}
perf-event-open-sys = { workspace = true}
errno = { workspace = true}
tracing = { workspace = true}
nix = { workspace = true, features = ["feature"] }

[build-dependencies]
libbpf-cargo = { workspace = true}
glob = { workspace = true}
