[package]
name = "lightswitch-capabilities"
version = "0.2.1"
edition = "2021"
description = "Discover which BPF features are available"
license = "MIT"
repository = "https://github.com/javierhonduco/lightswitch"

[dependencies]
libc = "0.2.175"
anyhow = { workspace = true}
thiserror = { workspace = true}
libbpf-rs = { workspace = true}
perf-event-open-sys = { workspace = true}
tracing = { workspace = true}
nix = { workspace = true, features = ["feature"] }
libbpf-sys = { workspace = true }

[build-dependencies]
libbpf-cargo = { workspace = true}
glob = { workspace = true}
