[package]
name = "lightswitch-metadata"
version = "0.1.0"
edition = "2021"
description = "Provides metadata used by profilers and debuggers"
license = "MIT"
repository = "https://github.com/javierhonduco/lightswitch"

[dependencies]
lru = "0.12.5"
nix = { workspace = true, features = ["user", "process"] }
anyhow = { workspace = true }
procfs = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
