[package]
name = "lightswitch-metadata"
version = "0.2.1"
edition = "2021"
description = "Provides metadata used by profilers and debuggers"
license = "MIT"
repository = "https://github.com/javierhonduco/lightswitch"

[dependencies]
lru = "0.16.0"
nix = { workspace = true, features = ["user", "process"] }
anyhow = { workspace = true }
procfs = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
