[package]
name = "lightswitch-object"
version = "0.1.1"
edition = "2021"
description = "Deals with object files"
license = "MIT"
repository = "https://github.com/javierhonduco/lightswitch"

[dependencies]
data-encoding = "2.6.0"
ring = "0.17.8"
memmap2 = { workspace = true }
object = { workspace = true }
anyhow = { workspace = true }
