[package]
name = "lightswitch-object"
version = "0.3.0"
edition = "2021"
description = "Deals with object files"
license = "MIT"
repository = "https://github.com/javierhonduco/lightswitch"

[dependencies]
data-encoding = "2.8.0"
ring = { workspace = true }
memmap2 = { workspace = true }
object = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
