[package]
name = "lightswitch-object"
version = "0.3.2"
edition = "2024"
description = "Deals with object files"
license = "MIT"
repository = "https://github.com/javierhonduco/lightswitch"

[dependencies]
data-encoding = "2.9.0"
ring = { workspace = true }
memmap2 = { workspace = true }
object = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
