[package]
name = "lightswitch-proto"
version = "0.1.1"
edition = "2021"
description = "Protocol buffers wrappers for use in profiling tools"
license = "MIT"
repository = "https://github.com/javierhonduco/lightswitch"

[dependencies]
prost = "0.13"
thiserror = { workspace = true }

[build-dependencies]
prost-build = "0.13.5"

[package.metadata.cargo-shear]
ignored = ["prost"]
