[package]
name = "lightswitch-proto"
version = "0.3.0"
edition = "2021"
description = "Protocol buffers wrappers for use in profiling tools"
license = "MIT"
repository = "https://github.com/javierhonduco/lightswitch"

[dependencies]
prost = "0.14"
thiserror = { workspace = true }

[build-dependencies]
prost-build = "0.14.3"
protox = "0.9.1"

[package.metadata.cargo-shear]
ignored = ["prost"]
