[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
lightswitch = { path = ".." }
lightswitch-metadata = { path = "../lightswitch-metadata" }
nix = { workspace = true, features = ["signal", "process"] }
tracing = { workspace = true }
tracing-subscriber = "0.3"
